# zOstrov

app/: build.gradle
app/src/main/: AndroidManifest.xml  z.ini
app/src/main/assets/: acontrollerMap.xml  ccontrollerMap.xml  keyboardDefault.xml
app/src/main/assets/textures/: digit123.ttl  en_large_abc.ttl  en_little_abc.ttl  font1.ttl  font2.ttl  font3.ttl  font4.ttl  fontDefault.ttl  font_def.ttl  font_default.ttl  ru_large_abc.ttl  ru_little_abc.ttl  znull.ttl  zssh.ttl  zxIcons.ttl  zx_icons.ttl
app/src/main/cpp/: CMakeLists.txt  GLConsumer.cpp  android_native.cpp  android_native.h  plan.txt  sshApp.cpp  sshApp.h  sshCommon.h  zActionBar.cpp  zAdapter.cpp  zCommonAdapters.cpp  zCommonLayout.cpp  zDrawable.cpp  zHandler.cpp  zSensorManager.cpp  zSoundManager.cpp  zSpanText.cpp  zTexture.cpp  zTheme.cpp  zTouch.cpp  zView.cpp  zViewChart.cpp  zViewEdit.cpp  zViewForms.cpp  zViewGrid.cpp  zViewGroup.cpp  zViewKeyboard.cpp  zViewManager.cpp  zViewPopup.cpp  zViewRibbons.cpp  zViewSelect.cpp  zViewTable.cpp  zViewText.cpp  zViewVideo.cpp  zViewWidgets.cpp
app/src/main/cpp/include/zssh/: layout_cell.h  layout_form.h  layout_linear.h  layout_linear_weights.h  layout_main.h  layout_scroll.h  layout_tabbed.h  zActionBar.h  zAdapter.h  zCommon.h  zCommonAdapters.h  zCommonLayout.h  zDrawable.h  zFileAsset.h  zHandler.h  zR.h  zSensorManager.h  zSoundManager.h  zSpanText.h  zSystemStyles.h  zTexture.h  zTheme.h  zTouch.h  zView.h  zViewForms.h  zViewGroup.h  zViewKeyboard.h  zViewManager.h  zViewRibbons.h  zViewText.h  zViewWidgets.h
app/src/main/res/layout/: layout_cell.xml  layout_form.xml  layout_linear.xml  layout_linear_weights.xml  layout_main.xml  layout_scroll.xml  layout_tabbed.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values-ru/: strings.xml  stringsMenu.xml
zostrov/: build.gradle
zostrov/src/main/assets/: acontrollerMap.xml  ccontrollerMap.xml  keyboardDefault.xml
zostrov/src/main/cpp/: CMakeLists.txt  plan.txt  zActionBar.cpp  zCommonAdapters.cpp  zCommonLayout.cpp  zDrawable.cpp  zFileAsset.cpp  zHandler.cpp  zSensorManager.cpp  zSoundManager.cpp  zSpanText.cpp  zTexture.cpp  zTheme.cpp  zTouch.cpp  zView.cpp  zViewChart.cpp  zViewEdit.cpp  zViewForms.cpp  zViewGrid.cpp  zViewGroup.cpp  zViewKeyboard.cpp  zViewManager.cpp  zViewRibbons.cpp  zViewSelect.cpp  zViewText.cpp  zViewVideo.cpp  zViewWidgets.cpp
zostrov/src/main/cpp/include/zostrov/: zActionBar.h  zCommon.h  zCommonAdapters.h  zCommonLayout.h  zDrawable.h  zFileAsset.h  zHandler.h  zR.h  zSensorManager.h  zSoundManager.h  zSpanText.h  zSystemStyles.h  zTexture.h  zTheme.h  zTouch.h  zView.h  zViewForms.h  zViewGroup.h  zViewKeyboard.h  zViewManager.h  zViewRibbons.h  zViewText.h  zViewWidgets.h
(+31 files in other folders)
